--- a/hosting/css/style.css
+++ b/hosting/css/style.css
@@ -317,7 +317,7 @@ body {
 	background: rgb(31, 44, 58);
 	border-radius: 4px;
 	width: 50%;
-	overflow: scroll;
+	overflow: auto;
 	opacity: 0;
 	visibility: hidden;
 	transition: all ease-out .5s;
